syntax = "proto3";

package codenjoy;

option java_package = "com.codenjoy.dojo";
option java_multiple_files = true;

message UserDetailsIdRequest{
  string id = 1;
}

message UserDetailsUsernameRequest{
  string username = 1;
}

message UserDetailsResponse{
  string id = 1;
  string email = 2;
  string slackEmail = 3;
}

message UserRequest{
  string contestId = 1;
}

message UserResponse{
  repeated User user = 1;
}

message User{
  string id = 1;
  string username = 2;
  string name = 3;
  string role = 4;
}

message UserSubscriptionRequest{
  string id = 1;
  int32 requestId = 2;
  string game = 3;
}

message UserSubscriptionResponse{
  bool emailSubscription = 1;
  bool slackSubscription = 2;
}

service UserDetailsService{
  rpc getUserDetailsById(UserDetailsIdRequest) returns (UserDetailsResponse);
  rpc getUserDetailsByUsername(UserDetailsUsernameRequest) returns (UserDetailsResponse);
  rpc getUsersForContest(UserRequest) returns (UserResponse);
  rpc getUserSubscriptionsForContest(UserSubscriptionRequest) returns (UserSubscriptionResponse);
}